--- a/06_浏览器本地存储/03_数据同步2.html
+++ b/06_浏览器本地存储/03_数据同步2.html
@@ -8,15 +8,15 @@
 <input type="text" id="val">
 <script type="text/javascript">
 
-  /*window.addEventListener('storage',(event)=>{
+  window.addEventListener('storage',(event)=>{
     let inputNode = document.getElementById('val')
     inputNode.value = event.newValue
-  })*/
+  })
 
   /*window.onstorage = ()=>{
     console.log(`11111111`)
   }*/
-  localStorage.getItem('data')
+  // localStorage.getItem('data')
 
 </script>
 </body>
